2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* HttpModuleCollection.cs (GetKey): Recursion, again!

2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* HttpClientCertificate.cs (ValidUntil): recursion!

2003-11-08 Ben Maurer  <bmaurer@users.sourceforge.net>

	* SiteMapNode.cs (GetDataSourceView): Implement.
	* SiteMapProvider.cs: Typo fixing.
	* XmlSiteMapProvider.cs: We shouldnt resolve here.
	
2003-11-08 Ben Maurer  <bmaurer@users.sourceforge.net>

	* SiteMap.cs (Init): implement a hack that doesnt need the config
	stuff. Should do that later.
	* SiteMapNodeCollection (OnValidate): Fix recursion.
	* SiteMapProvider.cs: We dont implement some culture stuff work
	around it. Fix typo.
	* XmlSiteMapProvider.cs: Added.
	
2003-11-07 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ISiteMapProvider.cs:
	* SiteMap.cs:
	* SiteMapNode.cs:
	* SiteMapNodeCollection.cs:
	* SiteMapProvider.cs:
	* SiteMapProviderCollection.cs: V2 sitemap related stuff.

2003-11-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: don't attempt to read more bytes than specified
	content length.

2003-11-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs:
	* HttpResponse.cs:
	* HttpUtility.cs:
	* HttpValueCollection.cs: encoding fixes/updates.

	* HttpWriter.cs: when updating the encoding, flush the existing stream.
	Encoding updates.

2003-11-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* HttpContext.cs (IsCustomErrorEnabled): dont throw exception, just
	return false (which makes sense, as the custom errors *arent* enabled;
	ie they dont work.
	* HttpResponseStream.cs: you actually can write with len = 0

2003-11-03 Jackson Harper <jackson@ximian.com>

	* HttpResponse.cs (ContentEncoding): Throw
	ArgumentNullException. Patch by Yaron Shkop.
	
2003-10-30  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* HttpMultipartContentParser.cs : Quick fix for cygwin build. 
	  CSC complains that constant char cannot be casted as byte.
